OC2 = OpenCart 2 (alleen OpenCart 2.3 wordt nog ondersteund)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress) (wordt niet meer ondersteund sinds 5.5.2)
WC3 = WooCommerce 3 (WordPress)
WC4 = WooCommerce 4 (WordPress)

6.1.0 (2020-11-??)
------------------
Features:
- WC|MA: Op het factuurstatusoverzicht heeft het veld waarop je de betaaldatum
  kunt invullen nu een standaardwaarde die op dezelfde manier bepaald wordt als
  bij automatische verzending.
- WC: Tekst  "buitenlandse btw" ingekort.

6.0.4 (2020-11-15)
------------------
Features:
- PS: Added the registration form to PS.
- ALL: verbeterde helpteksten op de instellingenformulieren als de logingegevens
  ontbreken of fout zijn.
- ALL: Over Acumulus info-blok bevat bij een proefcontract nu ook info over het
  aantal resterende boekingen en of er problemen zijn met e-mailverzending.

Bugs:
- ALL: Acumulus API misc/about en misc/my_acumulus geven geen 401 meer terug,
  maar een 403.
- JOO: Improved styling of forms and added logo to register form.
- ALL: Allow attribute values in class FormRenderer to be defined as an array.
- ALL: Gebruik van PHP 7 language construct.

6.0.3 (2020-10-26)
------------------
Features:
- OC: Added the registration form to OC.

Bugs:
- MA: Aanpasbare opties worden niet op de factuur gezet.
- WC: Bundle lines with price info on their children might not get a correct vat
  rate.

6.0.2 (2020-09-03)
------------------
Features:
- ALL: Nature van additionele services bepalen adhv hoofdbestanddeel van de
  factuur.
- JOO: Added the registration form to JOO.

Bugs:
- ALL: The example modules that show how to use the events generated by this
  module were not upgraded wrt some incompatible changes made in 6.0.0. The
  latest versions are now downloadable from the Acumulus forum at:
  https://forum.acumulus.nl/index.php?board=18.0